@@ -47,6 +47,7 @@ Changelog
  * Fix: Add Wagtail User Bar back to page previews and ensure moderation actions are available (Coen van der Kamp)
  * Fix: Resolve issue where queryset annotations were lost (e.g. `.annotate_score()`) when using specific models in page query (Dan Bentley)
  * Fix: Prevent date/time picker from losing an hour on losing focus when 12-hour times are in use (Jacob Topp-Mugglestone)
+ * Fix: Strip out HTML tags from `RichTextField` & `RichTextBlock` search index content (Timothy Bautista)
 
 
 2.9 (04.05.2020)
